--- a/style/index.css
+++ b/style/index.css
@@ -21,19 +21,24 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
+    vertical-align: baseline;
+    /*border: 1px dotted black;*/
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 }
+
 ol, ul {
 	list-style: none;
 }
+
 blockquote, q {
 	quotes: none;
 }
@@ -42,6 +47,7 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
@@ -56,10 +62,44 @@ html, body {
     font-family: 'Roboto', sans-serif;
 }
 
+header {
+    display: flex;
+    margin: .8% 0% 3% 0%;
+}
+
+.mainLogo {
+    width: ;
+    
+}
+
+.navBar {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    margin: 0% 1%;
+    color: darkorange;
+    flex-wrap: wrap;
+}
+
+.navBar a {
+    letter-spacing: 2px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    font-size: 150%;
+    color: black;
+}
+
 h1, h2, h3, h4, h5 {
     font-size: 18px;
     margin-bottom: 15px;
     font-family: 'Rubik', sans-serif;
+}
+
+h2 {
+    font-size: 170%;
 }
 
 p {
@@ -67,7 +107,7 @@ p {
 }
 
 .container {
-    width: 800px;
+    width: 60.5%;
     margin: 0 auto;
 }
 
@@ -83,6 +123,11 @@ p {
     width: 48%;
     padding: 0 1%;
     padding-bottom: 20px;  
+}
+
+.mainImg img {
+    width: 100%;
+    margin: 3% 0% ;
 }
 
 .middle-content {
@@ -111,6 +156,46 @@ p {
     align-items: center;
     justify-content: center;
 }
+
+.container .middle-content .boxes .box:nth-child(1) {
+    background: teal;
+  }
+
+.container .middle-content .boxes .box:nth-child(2) {
+    background: gold;
+  }
+
+  .container .middle-content .boxes .box:nth-child(3) {
+    background: cadetblue;
+  }
+
+  .container .middle-content .boxes .box:nth-child(4) {
+    background: coral;
+  }
+
+  .container .middle-content .boxes .box:nth-child(5) {
+    background: crimson;
+  }
+
+  .container .middle-content .boxes .box:nth-child(6) {
+    background: forestgreen;
+  }
+
+  .container .middle-content .boxes .box:nth-child(7) {
+    background: darkorchid;
+  }
+
+  .container .middle-content .boxes .box:nth-child(8) {
+    background: hotpink;
+  }
+
+  .container .middle-content .boxes .box:nth-child(9) {
+    background: indigo;
+  }
+
+  .container .middle-content .boxes .box:nth-child(10) {
+    background: dodgerblue;
+  }
 
 .bottom-content {
     display: flex;
@@ -143,4 +228,121 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+
+@media (max-width: 1120px) {
+
+    header .navBar a {
+        font-size: 100%;
+    }
+}
+
+
+@media (max-width: 900px) {
+
+    header .navBar a {
+        font-size: 75%;
+    }
+}
+
+@media (max-width: 800px) {
+
+    .container {
+        width: 80%;
+    }
+
+    header .navBar a {
+        width: 150%;
+        font-size: 100%;
+    }
+
+    .mainLogo {
+        width: 120%;
+    }
+
+    .mainLogo img {
+        width: 100%;
+    }
+
+    .navBar{
+        display: grid;
+        width: 100%;
+        justify-content: center;
+    }
+
+    .top-content {
+        flex-direction: column;
+        align-content: center;
+    }
+
+    .top-content .text-container {
+        width: 100%;
+    }
+
+    .middle-content .boxes {
+        flex-direction: column;
+        align-content: center;
+        width: 100%;
+    }
+
+    .container .middle-content .boxes .box{
+        width: 90%;
+        height: 420px;
+    }
+
+}
+
+@media (max-width: 500px) {
+
+    *{
+        flex-direction: column;
+        justify-items: center;
+        align-content: center;
+        
+    }
+    
+    .container {
+        width: 95%;
+    }
+
+    header{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .mainLogo img {
+        width: 91%;
+    }
+
+    .navBar{
+        display: flex;
+        flex-direction: column;
+    }
+    header .navBar a {
+        width: 100%;
+        background-color: lightgrey;
+        color: white;
+        padding: 14px 25px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        border: 1px solid black;
+        border-radius: 9%;
+        color: dodgerblue;
+    }
+
+    .container .middle-content .boxes .box{
+        width: 90%;
+        height: 300px;
+    }
+
+    .bottom-content {
+        display: none;
+    }
+
+    footer {
+        display: none;
+    }
+
 }
