--- a/style/contact.css
+++ b/style/contact.css
@@ -68,3 +68,21 @@ input[type=text], select, textarea {
     padding: 20px;
   }
 
+  footer {
+    background-color: white;
+  }
+
+  footer address a {
+    text-decoration: none;
+    color: blueviolet;
+  }
+
+  footer address a:hover {
+    text-decoration: none;
+    color: turquoise;
+    background-color: black;
+  }
+
+
+
+
